Add ability to save favorite movies into Room DB

--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/popularMoviesFragment"
+    <item
+        android:id="@+id/popularMoviesFragment"
         android:title="Popular Movies"
         android:icon="@android:drawable/ic_media_play" />
 
-    <item android:id="@+id/searchMoviesFragment"
+    <item
+        android:id="@+id/savedMoviesFragment"
+        android:icon="@android:drawable/ic_menu_save"
+        android:title="Saved Movies" />
+
+    <item
+        android:id="@+id/searchMoviesFragment"
         android:title="Search Movies"
         android:icon="@android:drawable/ic_menu_search" />
 
