--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/popularMoviesFragment"
-        android:title="Popular Movies"
-        android:icon="@android:drawable/ic_media_play" />
+        android:icon="@drawable/ic_popular"
+        android:title="Popular" />
 
     <item
         android:id="@+id/savedMoviesFragment"
-        android:icon="@android:drawable/ic_menu_save"
-        android:title="Saved Movies" />
+        android:icon="@drawable/ic_save"
+        android:title="Saved" />
 
     <item
         android:id="@+id/searchMoviesFragment"
-        android:title="Search Movies"
-        android:icon="@android:drawable/ic_menu_search" />
+        android:icon="@drawable/ic_search"
+        android:title="Search" />
 
 </menu>
