--- a/app/src/main/res/layout/item_similar_movie.xml
+++ b/app/src/main/res/layout/item_similar_movie.xml
@@ -25,9 +25,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:ellipsize="end"
+            android:text="Name one two three four five"
             android:lines="2"
             android:maxLines="2"
-            android:textSize="16sp"
+            android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/ivMovieImage" />
@@ -37,17 +39,27 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:text="2011"
             android:lines="1"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tvTitle" />
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="1dp"
+            android:src="@drawable/ic_star"
+            app:layout_constraintBottom_toBottomOf="@id/tvVoteAverage"
+            app:layout_constraintEnd_toStartOf="@id/tvVoteAverage" />
+
         <TextView
             android:id="@+id/tvVoteAverage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
+            android:text="5.0"
             android:lines="1"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
