--- a/app/src/main/res/layout/item_similar_movie.xml
+++ b/app/src/main/res/layout/item_similar_movie.xml
@@ -27,6 +27,7 @@
             android:layout_margin="5dp"
             android:ellipsize="end"
             android:text="Name one two three four five"
+            android:textStyle="bold"
             android:lines="2"
             android:maxLines="2"
             android:textSize="14sp"
