--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -58,6 +58,16 @@
                         app:layout_constraintStart_toEndOf="@id/cvMovieImage"
                         app:layout_constraintTop_toTopOf="parent" />
 
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/rvGenres"
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_margin="7dp"
+                        app:layout_constraintBottom_toTopOf="@id/tvReleaseDate"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@id/cvMovieImage"
+                        app:layout_constraintTop_toBottomOf="@id/tvTitle" />
+
                     <TextView
                         android:id="@+id/tvReleaseDate"
                         android:layout_width="wrap_content"
