--- a/app/src/main/res/layout/item_error_message.xml
+++ b/app/src/main/res/layout/item_error_message.xml
@@ -17,7 +17,7 @@
             android:layout_margin="16dp"
             android:layout_weight="2"
             android:gravity="center_horizontal"
-            android:text="Failed to connect"
+            android:text="@string/error_msg"
             android:textAlignment="center" />
 
         <Button
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
             android:layout_weight="1"
-            android:text="Retry" />
+            android:text="@string/btn_retry" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
