--- a/app/src/main/res/layout/item_genre.xml
+++ b/app/src/main/res/layout/item_genre.xml
@@ -10,6 +10,7 @@
         android:id="@+id/tvGenre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="3dp" />
+        android:layout_margin="3dp"
+        android:text="@string/test_genre" />
 
 </androidx.cardview.widget.CardView>
