--- a/app/src/main/res/navigation/movies_nav_graph.xml
+++ b/app/src/main/res/navigation/movies_nav_graph.xml
@@ -9,7 +9,7 @@
         android:label="PopularMoviesFragment">
         <action
             android:id="@+id/action_popularMoviesFragment_to_movieFragment"
-            app:destination="@id/movieFragment"
+            app:destination="@id/movieDetailsFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
@@ -21,7 +21,7 @@
         android:label="SavedMoviesFragment">
         <action
             android:id="@+id/action_savedMoviesFragment_to_moviesFragment"
-            app:destination="@id/movieFragment"
+            app:destination="@id/movieDetailsFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
@@ -33,22 +33,22 @@
         android:label="SearchMoviesFragment">
         <action
             android:id="@+id/action_searchMoviesFragment_to_movieFragment"
-            app:destination="@id/movieFragment"
+            app:destination="@id/movieDetailsFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
-        android:id="@+id/movieFragment"
-        android:name="ca.sharipov.movieinfo.ui.fragments.MovieFragment"
-        android:label="MovieFragment">
+        android:id="@+id/movieDetailsFragment"
+        android:name="ca.sharipov.movieinfo.ui.fragments.MovieDetailsFragment"
+        android:label="MovieDetailsFragment">
         <argument
             android:name="movieBrief"
             app:argType="ca.sharipov.movieinfo.models.MovieBrief" />
         <action
             android:id="@+id/action_movieFragment_to_movieFragment"
-            app:destination="@id/movieFragment"
+            app:destination="@id/movieDetailsFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
