--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="red_600">#e53935</color>
-    <color name="red_800">#c62828</color>
+    <color name="color_primary">#e53935</color>
+    <color name="color_primary_dark">#c62828</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="collapsing_toolbar">#e53935</color>
+    <color name="collapsing_toolbar_status">#c62828</color>
 </resources>
