Add About activity

--- a/app/src/main/res/layout/fragment_saved_movies.xml
+++ b/app/src/main/res/layout/fragment_saved_movies.xml
@@ -5,7 +5,7 @@
     android:fitsSystemWindows="true">
 
     <include
-        android:id="@+id/includeToolbar"
+        android:id="@+id/toolbarSaved"
         layout="@layout/toolbar" />
 
     <androidx.recyclerview.widget.RecyclerView
