--- a/app/src/main/res/layout/fragment_search_movies.xml
+++ b/app/src/main/res/layout/fragment_search_movies.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent">
 
     <include
-        android:id="@+id/includeToolbar"
+        android:id="@+id/toolbarSearch"
         layout="@layout/toolbar" />
 
     <include
