Update recycle views "tools:listitem"

--- a/app/src/main/res/layout/content_movie_details.xml
+++ b/app/src/main/res/layout/content_movie_details.xml
@@ -139,6 +139,9 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:orientation="horizontal"
+            app:layoutManager="LinearLayoutManager"
+            tools:listitem="@layout/item_similar_movie"
             android:id="@+id/rvSimilarMovies"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
