--- a/app/src/main/res/layout/content_popular_movies.xml
+++ b/app/src/main/res/layout/content_popular_movies.xml
@@ -2,9 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
+        tools:listitem="@layout/item_movie_preview"
         android:id="@+id/rvPopularMovies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
