--- a/app/src/main/res/layout/content_search_movies.xml
+++ b/app/src/main/res/layout/content_search_movies.xml
@@ -3,9 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:fitsSystemWindows="true">
 
     <androidx.recyclerview.widget.RecyclerView
+        tools:listitem="@layout/item_movie_preview"
         android:id="@+id/rvSearchMovies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
