Add placeholder in case of no image

--- a/app/src/main/res/layout/fragment_movie_details.xml
+++ b/app/src/main/res/layout/fragment_movie_details.xml
@@ -29,7 +29,8 @@
                 android:layout_height="match_parent"
                 android:contentDescription="@string/toolbar_iv_movie_image"
                 android:fitsSystemWindows="true"
-                android:scaleType="centerCrop" />
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_no_image" />
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
