--- a/app/src/main/res/layout/content_movie_details.xml
+++ b/app/src/main/res/layout/content_movie_details.xml
@@ -40,7 +40,8 @@
                         android:layout_width="100dp"
                         android:layout_height="150dp"
                         android:contentDescription="@string/iv_movie_image"
-                        android:scaleType="centerCrop" />
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/ic_no_image" />
 
                 </androidx.cardview.widget.CardView>
 
