--- a/app/src/main/res/layout/item_movie_preview.xml
+++ b/app/src/main/res/layout/item_movie_preview.xml
@@ -15,7 +15,8 @@
             android:layout_width="100dp"
             android:layout_height="150dp"
             android:contentDescription="@string/iv_movie_image"
-            android:scaleType="centerCrop"
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_no_image"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
