Update genres to use Chip and ChipGroup

--- a/app/src/main/res/layout/content_movie_details.xml
+++ b/app/src/main/res/layout/content_movie_details.xml
@@ -69,27 +69,13 @@
                     app:layout_constraintStart_toEndOf="@id/cvMovieImage"
                     app:layout_constraintTop_toBottomOf="@id/tvTitle">
 
-                    <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/clGenres"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_margin="2dp">
-
-                        <ca.sharipov.serhii.movieinfo.ui.custom.GenresFlow
-                            android:id="@+id/gfGenres"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="2dp"
-                            app:flow_horizontalBias="0"
-                            app:flow_horizontalGap="5dp"
-                            app:flow_horizontalStyle="packed"
-                            app:flow_verticalBias="0"
-                            app:flow_verticalGap="5dp"
-                            app:flow_wrapMode="chain"
-                            app:layout_constraintEnd_toEndOf="parent"
-                            app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toTopOf="parent" />
-                    </androidx.constraintlayout.widget.ConstraintLayout>
+                    <com.google.android.material.chip.ChipGroup
+                        android:id="@+id/cgGenres"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
                 </androidx.core.widget.NestedScrollView>
 
                 <TextView
