--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -13,7 +13,13 @@
         <item name="android:windowTranslucentStatus" tools:targetApi="l">true</item>
         <!-- Customize your theme here. -->
         <item name="android:navigationBarColor" tools:targetApi="l">@color/black</item>
+        <item name="chipStyle">@style/MaterialComponents_Chip_Thin</item>
     </style>
 
+    <style name="MaterialComponents_Chip_Thin" parent="@style/Widget.MaterialComponents.Chip.Action">
+        <item name="chipMinHeight">@dimen/chipMinHeight</item>
+        <item name="chipMinTouchTargetSize">@dimen/chipMinTouchTargetSize</item>
+        <item name="android:textSize">@dimen/chipTextSize</item>
+    </style>
 
 </resources>
